* added many='true' to FeaturTypeType#getOtherSRS() and OutputFormatListType#getFormat()